--- a/app/src/main/res/layout/fragment_settings_dialog.xml
+++ b/app/src/main/res/layout/fragment_settings_dialog.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:theme="@style/Theme.Material3.DynamicColors.Dark"
     android:padding="20dp">
@@ -189,8 +189,7 @@
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content">
         <com.google.android.material.button.MaterialButton
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
